# NCEPLIBS-sfcio

./: CMakeLists.txt  LICENSE.md  README  README.md  annotated.html  annotated_dup.js  build_sfcio.sh  classes.html  configure  configure.ac  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  files_dup.js  index.html  interfacesfcio__module_1_1sfcio__srohdc.html  make_sfcio_lib.sh  makefile_4  modulefile.template  navtreedata.js  navtreeindex0.js  sfcio__module_8f.html  sfcio__module_8f.js  sfcio__module_8f_source.html  structsfcio__module_1_1sfcio__data.html  structsfcio__module_1_1sfcio__dbta.html  structsfcio__module_1_1sfcio__head.html
.github/workflows/: Intel.yml  Spack.yml  main.yml
Conf/: Sfcio_gnu_General.sh  Sfcio_intel_Cray.sh  Sfcio_intel_Dell.sh  Sfcio_intel_General.sh  Sfcio_intel_Hera.sh  Sfcio_intel_Jet.sh  Sfcio_intel_Theia.sh  Sfcio_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
config-setup/: gfortran-debug.setup  gfortran.setup  ifort-debug.setup  ifort.setup  pgf95-debug.setup  pgf95.setup  xlf2003-debug.setup  xlf2003.setup
docs/: Doxyfile.in  user_guide.md
libsrc/: make.dependencies  make.filelist
search/: all_0.js  classes_0.js  files_0.js  searchdata.js
spack/: README  package.py
src/: CMakeLists.txt  Makefile  sfcio_module.f
tests/: CMakeLists.txt  test_mod.pf  test_sigio_mod.pf
